[package]
name = "nx-pkg4"
version = "0.1.0"
edition = "2021"
authors = ["Zach Lindner <zach.lindner@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zlindner/nx-pkg4"
documentation = "https://docs.rs/nx-pkg4/"
description = "A crate for reading NX/PKG4 files"
categories = ["parser-implementations"]
keywords = ["nx", "pkg4", "maplestory"]

[dependencies]
lz4_flex = "0.11.3"
memmap2 = "0.9.5"
thiserror = "2.0.6"
